assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Poppins:ital,wght@1,700&display=swap");
* {
    margin: 0;
    padding: 0;
    border: none;
}
body {
    background-color: #FFF2CC;
    font-family: Inconsolata, light;
    font-weight: 200;
    color: #0E540E;
}
a {
    text-decoration: none;
}
/* headings and logo */
header {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 200px;
    width: 100%;
}
h1 {
    font-family: Poppins, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #0E540E;
    padding: 4px;
    border-top: 8px solid #7FFF00;
    border-bottom: 8px solid #7FFF00;
    line-height: 40px;
    text-align: center;
    background-color: rgba(241, 241, 79, 0.7);
}

#logo {
    width: 100%;
    display: flex;
    justify-content: center;
}

h2,
h3 {
    font-family: Poppins, sans-serif;
    text-transform: capitalize;
    letter-spacing: 3px;
    color: #0E540E;
}
h4 {
    font-family: Poppins, sans-serif;
    text-transform: capitalize;
    letter-spacing: 3px;
    color: #0E540E;
}

/* navigation links */
#menu {
    display: inline-flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: 150%;
    letter-spacing: 4px;
    width: 100%;
    height: 60px;
    border-bottom: 4px solid #7FFF00;
    border-top: 4px solid #7FFF00;
    align-items: center;
    background-color: rgba(241, 241, 79, 0.7);
}

#menu li {
    list-style-type: none;
    padding: 10px;
}
#menu a {
    text-decoration: none;
    color: inherit;
}
#menu a:hover {
    border-bottom: 1px solid #0E540E;
}
.active {
    border-bottom: 1px solid #0E540E;
}
/* ambulance image and cover-text */
#ambulance-outer {
    height: 500px;
    width: 100%;
    position: relative;
}

#ambulance-image {
    height: 500px;
    width: 100%;
    margin-top: 50px;
    background: url(../images/ambu1.jpg) no-repeat center center;
    background-size: contain;
}

#Amb-blue {
    width: 100px;
    height: 100px;
    position: absolute;
    right: 83%;
    top: 18%;
    background: url(../images/Amb-blue.png) no-repeat center center;
    background-size: contain;
    border-radius: 40%;
}

#Hosp-logo {
    width: 100px;
    height: 100px;
    position: absolute;
    left: 83%;
    top: 18%;
    background: url(../images/Hosp.png) no-repeat;
    background-size: contain;
    border-radius: 40%;
}

#Medical-logo {
    max-width: 20%;
    height: auto;
    position: absolute;
    right: 40%;
    background: url(../images/Medical-logo.png);
}

/* about */
#about {
    height: 500px;
    display: flex;
    flex-direction: column;
}
#left-about {
    padding-top: 50px;
    width: 25%;
    float: left;
}
#right-about {
    padding-top: 50px;
    width: 25%;
    float: right;
    text-align: right;
}
#center-about {
    width: 25%;
    margin: 0 auto;
    height: 1000px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
hr {
    border-top: 2px solid #0E540E;

    margin: 3px 0;
}
.left-about-heading {
    width: 70%;
    float: right;
    line-height: 25px;
    clear: both;
    margin-bottom: 40px;
}

.right-about-heading {
    width: 70%;
    line-height: 25px;
    clear: both;
    margin-bottom: 40px;
}

#welcome {
    text-align: center;
    margin: 40px 0;
    font-size: 280%;
    text-decoration: underline;
}

/* staff section*/
#staff {
    text-align: center;
    margin: 100px 0;
    font-size: 280%;
    margin-bottom: 30px;
    text-decoration: underline;
}

#circle-container {
    width: 300px;
    height: 450px;
    padding: 10px;
    border-style: solid;
    border-color: #7FFF00;
    border-width: 8px;
    border-radius: 50%;
}
#circle-cover-bg {
    background: url(../images/para2.jpg) no-repeat center;
    height: 100%;
    border-radius: 70%;
    border: 5px solid #7FFF00;
    padding: 5px;

    background-size: cover;
}
#phecc-badge {
    background: url(../images/phecc2.jpg) no-repeat center;
    height: 100%;
    width: 100%;
}
#staff-heading {
    width: 70%;
    line-height: 25px;
    margin: 0px auto 40px auto;
}
#staff-section {
    width: 100%;
    display: flex;
    flex-direction: column;
}
#staff-div {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 50px;
}

.box {
    max-width: 250px;
    height: 500px;
    display: flex;
    flex-direction: column;
}

.box img {
    height: auto;
    width: 150px;
    margin: auto;
    align-self: flex-end;
    display: flex;
    padding-top: 5px;
}

/* footer section*/
footer {
    height: 200px;
    margin-top: 50px;
}

.social-media {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    list-style-type: none;
}
.social-media i {
    font-size: 200%;
    padding: 8%;
    color: #0E540E;
}

* {
    box-sizing: border-box;
}

/* Full-width input fields */
input[type="text"],
input[type="password"],
input[type="email"] {
    width: 100%;
    padding: 15px;
    margin: 5px 0 22px 0;
    display: inline-block;
    border: none;
    background: #d8f2be;
}

input[type="text"]:focus,
input[type="password"]:focus {
    background-color: #ddd;
    outline: none;
}

hr {
    border: 1px solid #0E540E;
    margin-bottom: 75px;
}

/* Set a style for all buttons */
button {
    background-color: #0E540E;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    cursor: pointer;
    width: 100%;
    opacity: 0.9;
}

button:hover {
    opacity: 1;
}

/* Extra styles for the cancel button */
.clearbtn {
    padding: 14px 20px;
    background-color: #f44336;
}

/* Float cancel and signup buttons and add an equal width */
.clearbtn,
.signupbtn {
    float: left;
    width: 50%;
}

/* Add padding to container elements */
.container {
    padding: 16px;
}

.container h3 {
    text-align: center;
    border-bottom: 8px solid #7FFF00;
    border-top: 8px solid #7FFF00;
    font-size: 30px;
}

/* Clear floats */
.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

#thank-you-info {
    width: 100%;
    height: 70vh;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

/* media queries */

/* for medium screen sizes of 950px wide and down */

@media screen and (max-width: 950px) {
    header {
        flex-direction: column;
    }

    #logo {
        width: 100%;
        display: flex;
        justify-content: center;
        margin-top: 100px;
    }

    #menu {
        display: inline-flex;
        flex-direction: row;
        justify-content: space-between;
        font-size: 150%;
        letter-spacing: 4px;
        width: 100%;
        height: 60px;
        border-bottom: 4px solid #7FFF00;
        border-top: 4px solid #7FFF00;
        align-items: center;
        background-color: rgba(241, 241, 79, 0.7);
        position: fixed;
        top: 0;
        left: 0;
    }

    .left-about-heading {
        float: none;
        line-height: 25px;
        clear: both;
        margin: 0 auto;
        margin-bottom: 20px;
    }

    .right-about-heading {
        line-height: 25px;
        clear: both;
        text-align: left;
        margin: 0 auto;
        margin-bottom: 20px;
    }

    #left-about {
        width: 90%;
        float: none;
        margin: 0 auto;
    }
    #right-about {
        float: none;
        clear: both;
        width: 90%;
        margin: 0 auto;
    }
    #center-about {
        width: 90%;
        height: 800px;
        margin: 0 auto;
        float: none;
        clear: both;
    }

    #ambulance-outer {
        height: 300px;
        width: 100%;
        position: relative;
    }

    #ambulance-image {
        height: 300px;
        width: 100%;
        margin-top: 50px;
        background: url(../images/ambu1.jpg) no-repeat center center;
        background-size: contain;
    }

    #circle-cover-bg {
        width: 300px;
        margin: 0 auto;
        flex-direction: column;
    }

    #staff {
        width: 100%;
        clear: both;
        height: 150px;
        font-size: 30px;
    }

    #staff-div {
        flex-direction: column;
        margin: 0 auto;
    }

    .box {
        max-width: 500px;
        margin: 0 30px;
    }

    /* for small to medium screen size from 650px wide and down */

    @media screen and (max-width: 650px) {
        #about {
            width: 70%;
            height: 1200px;
            margin: 0 auto;
        }

        #Amb-blue {
            display: none;
        }

        #Hosp-logo {
            display: none;
        }

        #Medical-logo {
            display: none;
        }

        #menu,
        h1 {
            display: inline-flex;
            flex-direction: row;
            justify-content: space-between;
            font-size: 90%;
        }

        #welcome {
            padding: 30px 0;
            margin: 0;
        }

        #left-about,
        #right-about {
            width: 100%;
            float: left;
            padding: 0;
        }

        #center-about {
            clear: both;
            width: 100%;
            float: left;
            padding: 0;
        }

        hr {
            display: none;
        }

        .cancelbtn,
        .signupbtn {
            width: 100%;
        }

        #logo {
            width: 100%;
        }
    }
}

